/*
 * Copyright [2021-present] [ahoo wang <ahoowang@qq.com> (https://github.com/Ahoo-Wang)].
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *      http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package me.ahoo.cosec.policy.condition.part

import me.ahoo.cosec.api.configuration.Configuration
import me.ahoo.cosec.api.context.SecurityContext
import me.ahoo.cosec.api.context.request.Request
import me.ahoo.cosec.api.policy.ConditionMatcher

abstract class PartConditionMatcher(
    override val type: String,
    final override val configuration: Configuration
) : ConditionMatcher {
    private val partExtractor: PartExtractor = configuration
        .getRequired(CONDITION_MATCHER_PART_KEY).asString()
        .let {
            DefaultPartExtractor(it)
        }

    override fun match(request: Request, securityContext: SecurityContext): Boolean {
        val partValue = partExtractor.extract(request, securityContext)
        return matchPart(partValue)
    }

    abstract fun matchPart(partValue: String): Boolean
}
